# sonority

./: .gitignore  .gitmodules  README.md
sonority_engine/: 2ndorderAmbisonicClock.wav.reapeaks  CMakeLists.txt  README.md
sonority_engine/cmake/: sonority_module_common.cmake
sonority_engine/engine/: CMakeLists.txt
sonority_engine/engine/src/: Sonority.cpp  Sonority.h  SonorityRTCallback.cpp  SonorityRTCallback.h  UnityNativeLogger.cpp  UnityNativeLogger.h
sonority_engine/modules/: CMakeLists.txt
sonority_engine/modules/ambisonic_processor/: CMakeLists.txt
sonority_engine/modules/ambisonic_processor/src/ambisonic_processor/: AmbisonicEncoder.cpp  AmbisonicEncoder.h  AmbisonicRotator.cpp  AmbisonicRotator.h
sonority_engine/modules/audio_engine/: CMakeLists.txt
sonority_engine/modules/audio_engine/src/audio_engine/: AudioEngine.cpp  AudioEngine.h  AudioFilePool.cpp  AudioFilePool.h  CommandQueue.cpp  CommandQueue.h  Vector3.h
sonority_engine/modules/audio_engine/test/: TestTestModuleClass.cpp
sonority_engine/modules/audio_graph/: CMakeLists.txt
sonority_engine/modules/audio_graph/src/audio_graph/: AudioBlockPlayer.cpp  AudioBlockPlayer.h  AudioGraph.cpp  AudioGraph.h  MultichannelAudioBlockPlayer.cpp  MultichannelAudioBlockPlayer.h
sonority_engine/modules/audio_graph/src/audio_graph/nodes/: WorldSpaceNode.cpp  WorldSpaceNode.h
sonority_engine/modules/sofa_renderer/: CMakeLists.txt
sonority_engine/modules/sofa_renderer/src/sofa_renderer/: BufferTransfer.h  SofaDodecRenderer.cpp  SofaDodecRenderer.h  SofaFilter.cpp  SofaFilter.h  SofaRenderer.cpp  SofaRenderer.h
sonority_engine/modules/sonority_test_module/: CMakeLists.txt
sonority_engine/modules/sonority_test_module/src/sonority_test_module/: TestModuleClass.cpp  TestModuleClass.h
sonority_unity/: mono_crash.a1158080a.0.json  mono_crash.a1158080a.1.json
sonority_unity/Assets/Plugins/sonority/src/: NativePluginLoader.cs  SonorityAudioSource.cs  SonorityEditor.cs  SonorityIntegration.cs
sonority_unity/Assets/Scenes/: SampleScene.unity
sonority_unity/Assets/Scripts/: NoiseInducer.cs  PlayerInput.cs  PlayerMotor.cs  PlayerView.cs
sonority_unity/ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
